Fixed answer elements overlapping in mobile view

--- a/asset/style.css
+++ b/asset/style.css
@@ -118,7 +118,8 @@ h2 {
   font-size: 100%;
   font-size: 1rem;
   width: 100px;
-  height: 50px;
+  height: 40px;
+  margin: 1rem;
 }
 
 #answers button {
